<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awesomeguy</string>
    <string name="main_screen">Game Play</string>
    <string name="splash_screen">Awesomeguy</string>
    <string name="room_prompt">Select a starting level</string>
        <string name="app_gamestart">Start Game</string>
        <string name="app_help">Read Help</string>
        <string name="app_options">Options</string>
        <string name="app_credits">Credits and Legal</string>
        <string name="app_players">Players</string>
        <string name="app_highscores">High Scores</string>
    	<string name="app_story">Read Story</string>
    	
    	<string name="menu_url_choices">Web Scores</string>
    	<string name="menu_url">Web Scores Online</string>
    	<string name="menu_username">Change Account</string>
    	
    	<string name="hello_world">Hello world!</string>
    	<string name="menu_settings">Settings</string>
    	<string name="title_activity_web_auth">Authentication</string>
    	
    	<string name="menu_text_greeting">Options for </string>
    	<string name="menu_text_room_item">Starting Room</string>
    	
    	<string name="menu_text_speed_item">Game Speed</string>
    	<string name="menu_text_speed_slow">Speed = 16</string>
    	<string name="menu_text_speed_medium">Speed = 20</string>
    	<string name="menu_text_speed_fast">Speed = 24</string>
    	<string name="menu_text_speed_faster">Speed = 32</string>
    	<string name="menu_text_speed_system">System Determined</string>
    	
    	<string name="menu_text_sound_item">Play No Sound</string>
    	<string name="menu_text_sound_no">No Sound</string>
    	<string name="menu_text_sound_yes">Play Sound</string>
    	    
    	<string name="menu_text_players_item">How Many Players</string>
		<string name="menu_text_players_five">Five Players</string>
		<string name="menu_text_players_ten">Ten Players</string>
		<string name="menu_text_players_fifty">Fifty Players</string>
    	    
    	<string name="menu_text_rememberme_item">Remember Me</string>
    	<string name="menu_text_rememberme_no">Do Not Remember Me</string>
       	<string name="menu_text_rememberme_yes">Remember Me</string>
    	    	
    	<string name="menu_text_xml_item">Look for XML</string>
    	<string name="menu_text_xml_no">Do Not Look For XML</string>
    	<string name="menu_text_xml_yes">Look For XML</string>
    	    
    	<string name="menu_text_analytics_item">Google Analytics</string>
    	<string name="menu_text_analytics_no">Do Not Report</string>
    	<string name="menu_text_analytics_yes">Report Google Analytics</string>
    	    
    	<string name="menu_text_monsters_item">Show Monsters</string>
    	<string name="menu_text_monsters_no">No Monsters</string>
    	<string name="menu_text_monsters_yes">Monsters</string>
    	    
    	<string name="menu_text_collision_item">Monster Collision</string>
    	<string name="menu_text_collision_no">No Collision Detection</string>
    	<string name="menu_text_collision_yes">Regular Collision</string>
    	    
        <string name="app_legal">LEGAL 
            \n This version of Awesomeguy can submit your scores to an online database. For instructions on
submitting your scores in this way, please see the HELP page. 
			\n\n NOTE: The server for this database is operated for free and 
could be disabled at any time if volume is too high. Also, scores submitted to the database
can be erased by administrators at any time if the game-name is inapropriate or objectionable. 
            \n\n This version of Awesomeguy can report your game usage statistics to Google Analytics. 
This allows the developers to track
how many users actually play the game. Google Analytics does not change any aspect of game play, and it does not report
the identity of the users in any way. It DOES encourage the developers of the game to add features for future releases.
Google Analytics is enabled by default, but can be disabled easily from the Options screen.
\n\nFEATURES \n This version of Awesomeguy supports game play in landscape mode. In this
mode the D-pad is re-arranged on the bottom of the screen in a single row. Awesomeguy should automatically re-orient
itself when the phone is turned. 
\n\nThis version of Awesomeguy also has revamped Players and Highscores screens, and it even has a new splash screen.
 Also the options
menu has been totally reorganized. All the old options are still available, but they are found by pressing the 
menu key from the 
Players page. This version also uses OpenGL to display its graphics, and so is a little bit faster to play. Also the 
color scheme for the levels has changed slightly. Ladders and platforms are still in the same places, but they may
look a little different.</string>
		<string name="app_helptext">MOVEMENT: Use the arrow keys on the touch screen to move the character in the four basic directions. =B= is the jump key. On some phones the trackball can also be used for the four directions. You can climb the ladders and jump from the platforms. You can fall any distance without hurting yourself. Monsters
can kill you unless you jump right on top of them. Gold blocks with red dots are extra lives. The white crystal 
takes you to the next level.\n\n
PLAYERS: Choose the =Stay-On-This-Screen= option from the start screen. Here you can enter the name of your own player, 
used for high scores and also for 
saving all your game preferences. Touch the edit area to enter a name. Use the pop-up keyboard to type in letters, then press ENTER when 
you are done. Press enter a second time to accept the new name and use it for all your high scores. The first time you make a high score the 
new name will be saved in the Players table with all the others. After that, touch the entry in the Players table to select a different player,
or use the game =Remember-Me= setting to use the same player over and over.
	\n\nWEB UPLOAD: To upload your scores to the internet go to the High Scores screen and long-press the score you want to upload. The game will
attempt to upload your score. To view your online scores, go to the menu on the Players page and select WEB SCORES.
	

</string>
		<string name="app_storytext">THE STORY: 
 \nIn the future, evil robot aligators take over the planet. AWESOMEGUY, the hero, must find his way around the world, transporting to different places, collecting points and stopping the alien aligators. Look out for platforms, 
pyramids, mazes, castles, and flying steaks. \n\nYou are AWESOMEGUY. Run away 
  from the aligators. Jump on them to kill them. Get the crystal to go to the 
  next level. The key is a checkpoint and the rings and gold bricks are worth points. There is also a life or two 
  out there and they are gold too. Have fun.
</string>
</resources>